--- a/spring-webmvc/pom.xml
+++ b/spring-webmvc/pom.xml
@@ -267,6 +267,54 @@
 	    <version>1.0.0.GA</version>
 	    <scope>test</scope>
 	</dependency>
+	<dependency>
+	    <groupId>org.eclipse.jetty</groupId>
+	    <artifactId>jetty-server</artifactId>
+	    <version>8.1.5.v20120716</version>
+	    <scope>test</scope>
+	    <exclusions>
+	    	<exclusion>
+	    		<groupId>org.eclipse.jetty.orbit</groupId>
+	    		<artifactId>javax.servlet</artifactId>
+	    	</exclusion>
+	    </exclusions>
+	</dependency>
+	<dependency>
+	    <groupId>org.eclipse.jetty</groupId>
+	    <artifactId>jetty-servlet</artifactId>
+	    <version>8.1.5.v20120716</version>
+	    <scope>test</scope>
+	    <exclusions>
+	    	<exclusion>
+	    		<groupId>org.eclipse.jetty.orbit</groupId>
+	    		<artifactId>javax.servlet</artifactId>
+	    	</exclusion>
+	    </exclusions>
+	</dependency>
+	<dependency>
+	    <groupId>dom4j</groupId>
+	    <artifactId>dom4j</artifactId>
+	    <version>1.6.1</version>
+	    <scope>test</scope>
+	    <exclusions>
+	    	<exclusion>
+	    		<groupId>xml-apis</groupId>
+	    		<artifactId>xml-apis</artifactId>
+	    	</exclusion>
+	    </exclusions>
+	</dependency>
+	<dependency>
+	    <groupId>xmlunit</groupId>
+	    <artifactId>xmlunit</artifactId>
+	    <version>1.3</version>
+	    <scope>test</scope>
+	</dependency>
+	<dependency>
+	    <groupId>rhino</groupId>
+	    <artifactId>js</artifactId>
+	    <version>1.7R1</version>
+	    <scope>test</scope>
+	</dependency>
     
   </dependencies>
 </project>
