--- a/spring-aop/pom.xml
+++ b/spring-aop/pom.xml
@@ -49,7 +49,19 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
       <version>3.2.18.RELEASE</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>3.2.18.RELEASE</version>
       <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>3.2.18.RELEASE</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -57,7 +69,25 @@
       <artifactId>spring-core</artifactId>
       <version>3.2.18.RELEASE</version>
       <type>test-jar</type>
-      <scope>compile</scope>
+      <scope>test</scope>
     </dependency>
   </dependencies>
+    <build>
+  	<plugins>
+		  <plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-jar-plugin</artifactId>
+		    <executions>
+		      <execution>
+		        <configuration>
+		          <skip>false</skip>
+		        </configuration>
+		        <goals>
+		          <goal>test-jar</goal>
+		        </goals>
+		      </execution>
+		    </executions>
+		  </plugin>
+  	</plugins>
+  </build>
 </project>
