--- a/spring-beans/pom.xml
+++ b/spring-beans/pom.xml
@@ -9,31 +9,6 @@
   </parent>
   <artifactId>spring-beans</artifactId>
   <name>Spring Beans</name>
-  <description>Spring Beans</description>
-  <url>https://github.com/SpringSource/spring-framework</url>
-  <organization>
-    <name>SpringSource</name>
-    <url>http://springsource.org/spring-framework</url>
-  </organization>
-  <licenses>
-    <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-  <developers>
-    <developer>
-      <id>jhoeller</id>
-      <name>Juergen Hoeller</name>
-      <email>jhoeller@gopivotal.com</email>
-    </developer>
-  </developers>
-  <scm>
-    <connection>scm:git:git://github.com/SpringSource/spring-framework</connection>
-    <developerConnection>scm:git:git://github.com/SpringSource/spring-framework</developerConnection>
-    <url>https://github.com/SpringSource/spring-framework</url>
-  </scm>
   <dependencies>
     <dependency>
       <groupId>javax.el</groupId>
@@ -53,8 +28,32 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
       <version>3.2.18.RELEASE</version>
-      <type>test-jar</type>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>3.2.18.RELEASE</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+  <build>
+  	<plugins>
+		  <plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-jar-plugin</artifactId>
+		    <executions>
+		      <execution>
+		        <configuration>
+		          <skip>false</skip>
+		        </configuration>
+		        <goals>
+		          <goal>test-jar</goal>
+		        </goals>
+		      </execution>
+		    </executions>
+		  </plugin>
+  	</plugins>
+  </build>
 </project>
