--- a/spring-webmvc-tiles3/pom.xml
+++ b/spring-webmvc-tiles3/pom.xml
@@ -28,8 +28,14 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
       <version>3.2.18.RELEASE</version>
-      <type>test-jar</type>
       <scope>provided</scope>
+    </dependency>
+	<dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>3.2.18.RELEASE</version>
+      <type>test-jar</type>
+      <scope>test</scope>
     </dependency>
 	<dependency>
 	    <groupId>javax.servlet</groupId>
